fixed back-mainPage error and hide vertical scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
 /*FIRST PAGE CSS */
 
+body{
+	overflow-y:hidden; /* hide scroll-bar */
+}
+
 .logoImg{
     width: 30%;
     margin: 48px;
     /*border: 4px solid black;*/
+    border: 3px solid transparent;
     border-radius: 50px;
     padding: 20px;
     background-color: rgba(255,255,255, 0.9);
@@ -43,7 +48,7 @@
 	background-image: url("../img/bg3.jpg");
 	margin-left: -30px;
 	margin-right: -30px;
-	padding-bottom: 24px;
+	padding-bottom: 17px;
 }
 
 .firstPage{
